@@ -1,19 +1,37 @@
-/blib/
-/.build/
-_build/
-cover_db/
-inc/
-Build
 !Build/
-Build.bat
 .last_cover_stats
-/Makefile
-/Makefile.old
-/MANIFEST.bak
 /META.yml
 /META.json
 /MYMETA.*
-nytprof.out
-/pm_to_blib
 *.o
+*.pm.tdy
 *.bs
+
+# Devel::Cover
+cover_db/
+
+# Devel::NYTProf
+nytprof.out
+
+# Dist::Zilla
+/.build/
+
+# Module::Build
+_build/
+Build
+Build.bat
+
+# Module::Install
+inc/
+
+# ExtUtils::MakeMaker
+/blib/
+/_eumm/
+/*.gz
+/Makefile
+/Makefile.old
+/MANIFEST.bak
+/pm_to_blib
+/*.zip
+*.swp
+.DS_Store
