@@ -4,6 +4,7 @@ Revision history for CGI-Untaint-CountyStateProvince-GB
 	Use Test::DescribeMe to simplify tests
 	Use gtar to create a distribution on Macs
 	Use Test::Needs
+	Added t/30-basics.t
 
 0.12	Tue Dec 10 21:16:53 EST 2019
 	Don't allow 'west berkshire'
